# ai-file-repair

./: .gitignore  AI File Repair.spec  GITHUB-ACTIONS-GUIDE.md  README.md  SKILL.md  ai-file-repair.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
core/: __init__.py  core_disk_recovery.py  disk_sector_scanner.py  ntfs_mft_parser.py  raw_scan.py  real_disk_info.py  real_disk_scanner.py  researched_disk_recovery.py
gui/: __init__.py
references/: api-examples.md  gui-design.md  windows-gui-guide.md  workflow-review.md
scripts/: ai_repair_engine.py  bad_sector_handler.py  build_with_eula.py  comprehensive_disk_recovery.py  disk_recovery.py  generate_eula_pdf.py  gui_main.py  interfaces.py  ntfs_mft.py  real_disk_info.py  reconstruction.py  repair_engine.py  test_api.py
tests/: __init__.py  test_integration.py
utils/: __init__.py  ai_repair.py  build_windows.bat  disk_repair.py  eula_display.py  file_size_estimator.py
windows/: EULA-TW.md  GITHUB-TOKEN-GUIDE.md  README.md  build_exe.sh  build_with_docker.sh  complete_setup.sh  gh_setup.sh  setup_github.bat  setup_github.sh
